Fixed slider spacing

--- a/styles/css/vtex.minicart.css
+++ b/styles/css/vtex.minicart.css
@@ -21,3 +21,6 @@
     color: black;
 }
 
+:global(.vtex-minicart-2-x-overlay) {
+    filter: blur(.4);
+}
